# nopt

./: Cargo.toml
desktop/: Cargo.toml
desktop/src/: main.rs
nopt/: Cargo.toml
nopt/src/: compiler.rs  lib.rs  nes.rs  nes_assembly.rs  rom.rs
nopt/src/compiler/: cranelift_backend.rs  frontend.rs  ir.rs
nopt/src/compiler/frontend/: abstract.rs  abstract_instruction_compiler.rs  instruction_compiler.rs  instruction_decoder.rs  memory_compiler.rs  nes.rs
nopt/src/compiler/frontend/abstract/: cpu_memory.rs  ppu.rs  visitor.rs
nopt/src/compiler/frontend/nes/: cartridge.rs  cpu.rs  cpu_memory.rs  ppu.rs  visitor.rs
nopt/src/compiler/frontend/nes/cartridge/: nrom.rs
nopt/tests/: instr_test_v5.rs  nestest.rs  ppu_read_buffer.rs
nopt/tests/roms/: .gitignore
nopt/tests/roms/instr_test_v5/: .gitignore
nopt/tests/roms/nestest/: .gitignore
