[workspace]
resolver = "3"
members = ["desktop", "nopt"]

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
keyword_idents = "warn"
let_underscore_drop = "warn"
non_ascii_idents = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
many_single_char_names = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
