[package]
name = "nopt"
version = "0.0.0"
edition = "2024"

[dependencies]
cranelift-codegen = "0.124.0"
cranelift-frontend = "0.124.0"
iced-x86 = { version = "1.21.0", features = ["code_asm", "intel"] }
memmap2 = "0.9.8"
target-lexicon = "0.13.3"
tracing = "0.1.41"

[dev-dependencies]
regex = "1.12.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[lints]
workspace = true
